# stm32-blackpill-blinky

./: Cargo.toml
.cargo/: config.toml
src/: main.rs
