[package]
name = "stm32-blackpill-blinky"
version = "0.1.0"
edition = "2024"

[dependencies]
defmt = "0.3.0"
defmt-rtt ="0.4.0"
panic-probe = { version = "0.3.0", features = [ "print-defmt" ] }

cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.0"
hal = { package = "stm32-hal2", version = "^1.9.0", features = ["f411", "f4rt"]}
